@@ -1,3 +1,7 @@
+2010-06-21  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14799: htmlArea RTE: Color dialogue may raise a js error in IE
+
 2010-06-20  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14797: htmlArea RTE: Toolbar combo boxes do not float left in IE6 (Thnaks to Jigal van Hemert).
