@@ -1,3 +1,7 @@
+2010-06-21  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14799: htmlArea RTE: Color dialogue may raise a js error in IE
+
 2010-06-21  Ernesto Baschny  <ernst@cron-it.de>
 
 	* Fixed bug #8893: eval "timesec" sets seconds to zero (Thanks to Ralf Hettinger and Andy Grunwald)
